# snake

./: flake.nix  snake.cabal
app/: Main.hs  Terminal.hs
app/Terminal/: Input.hs
