cabal-version: 2.4
name:          snake
version:       0.1.0.0
license:       ISC
license-file:  LICENSE
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2021

executable snake
  hs-source-dirs:     app
  default-language:   Haskell2010
  main-is:            Main.hs
  other-modules:
    Terminal
    Terminal.Input

  ghc-options:        -Wall
  default-extensions:
    Arrows
    BlockArguments
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    PatternSynonyms
    TupleSections
    TypeApplications
    ViewPatterns

  build-depends:
    , ansi-terminal
    , base         ^>=4.14.1.0
    , containers
    , monad-loops
    , random
    , process
    , terminal-size
    , Yampa
